force-app/main/default/objects/Case/fields/Agency_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fee__c</fullName>
    <description>agency fee associated with hiring of the candidate</description>
    <label>Agency Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>