force-app/main/default/objects/Case/fields/Any_Agency_Fee__c.field-meta.xml
<CustomField>
    <fullName>Any_Agency_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check if any agecy fee is associated with hiring of the candidate</description>
    <label>Any Agency Fee</label>
    <type>Checkbox</type>
</CustomField>