force-app/main/default/objects/Case/fields/Buddy__c.field-meta.xml
<CustomField>
    <fullName>Buddy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A buddy can be assigned to a New Hire.</description>
    <label>Buddy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HR_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>