force-app/main/default/objects/Case/fields/Candidate_Has_Consulting_Background__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Has_Consulting_Background__c</fullName>
    <defaultValue>true</defaultValue>
    <description>checkbox to know if a hire has consulting background</description>
    <label>Candidate Has Consulting Background ?</label>
    <type>Checkbox</type>
</CustomField>