force-app/main/default/objects/Case/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New Hire reports to coach for all his updates.</description>
    <label>Coach</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HR_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>