force-app/main/default/objects/Case/fields/Comparable_Peer_1__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Peer_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A new hire is compared to the peer of his same level.</description>
    <label>Comparable Peer 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HR_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>