force-app/main/default/objects/Case/fields/Comparable_Peer_2__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Peer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A new hire is compared to his same level of peers.</description>
    <label>Comparable Peer 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HR_Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>