force-app/main/default/objects/Case/fields/Female_vs_Male_Hires__c.field-meta.xml
<CustomField>
    <fullName>Female_vs_Male_Hires__c</fullName>
    <description>specify the number of female hires compare to male hires</description>
    <label>Female vs. Male Hires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>