force-app/main/default/objects/Case/fields/Fills_Approved_Posting_c__c.field-meta.xml
<CustomField>
    <fullName>Fills_Approved_Posting_c__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identify whether this hire fills an approved posting on the orderboard ?</description>
    <label>Fills approved posting of orderboard ?</label>
    <type>Checkbox</type>
</CustomField>