force-app/main/default/objects/Case/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Level of position for the hire</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solution Associate</fullName>
            </value>
            <value>
                <fullName>Solution Developer</fullName>
            </value>
            <value>
                <fullName>Solution Designer</fullName>
            </value>
            <value>
                <fullName>Senior Solution Designer</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Senior consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>