force-app/main/default/objects/Case/fields/Name_of_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Approvers__c</fullName>
    <description>the name of the peopl who approved this hire</description>
    <label>Name of Approvers</label>
    <type>TextArea</type>
</CustomField>