force-app/main/default/objects/Case/fields/OfferingLeader__c.field-meta.xml
<CustomField>
    <fullName>OfferingLeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OfferingLeader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HR_Applications7</relationshipName>
    <type>Lookup</type>
</CustomField>