force-app/main/default/objects/Case/fields/Other_compensation__c.field-meta.xml
<CustomField>
    <fullName>Other_compensation__c</fullName>
    <description>Other eligible compensations  for the candidate</description>
    <label>Other_compensation</label>
    <type>TextArea</type>
</CustomField>