force-app/main/default/objects/Case/fields/Overtime_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if candidate is eligible for overtime work</description>
    <label>Overtime Eligibility</label>
    <type>Checkbox</type>
</CustomField>