force-app/main/default/objects/Case/fields/Period_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Period_Utilization__c</fullName>
    <description>the period utilization of a hire over last 3 period</description>
    <label>Period Utilization</label>
    <type>TextArea</type>
</CustomField>