force-app/main/default/objects/Case/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <description>Portfolio of a hire</description>
    <label>Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Customer</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>