force-app/main/default/objects/Case/fields/Proposed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Start_Date__c</fullName>
    <description>proposed start date when candidate can start work</description>
    <label>Proposed Start Date</label>
    <type>Date</type>
</CustomField>