force-app/main/default/objects/Case/fields/Qualify_to_Work_in_US__c.field-meta.xml
<CustomField>
    <fullName>Qualify_to_Work_in_US__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check if candidate is qualified to work in US</description>
    <label>Qualify to Work in US</label>
    <type>Checkbox</type>
</CustomField>