force-app/main/default/objects/Case/fields/Reason_for_this_Hire__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_this_Hire__c</fullName>
    <description>select the appropriate reason to new hiring for this hire</description>
    <label>Reason for this Hire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Headcount</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>