force-app/main/default/objects/Case/fields/Recommended_Salary__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Salary__c</fullName>
    <description>the recommended salary for a cadidate of this level of position</description>
    <label>Recommended Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>