force-app/main/default/objects/Case/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region of posting of a hire</description>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>