force-app/main/default/objects/Case/fields/Resource_deployment__c.field-meta.xml
<CustomField>
    <fullName>Resource_deployment__c</fullName>
    <description>List specific projects/pursuits</description>
    <label>Resource deployment</label>
    <type>TextArea</type>
</CustomField>