force-app/main/default/objects/Case/fields/Salary_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expectations__c</fullName>
    <description>the expected salary of a candidate</description>
    <label>Salary Expectations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>