force-app/main/default/objects/Case/fields/Salary_range_level__c.field-meta.xml
<CustomField>
    <fullName>Salary_range_level__c</fullName>
    <description>the salary range of a hire as per role/region</description>
    <label>Salary range level</label>
    <type>TextArea</type>
</CustomField>