force-app/main/default/objects/Case/fields/Special_Clauses__c.field-meta.xml
<CustomField>
    <fullName>Special_Clauses__c</fullName>
    <description>to add any special clauses for the candidate</description>
    <label>Special Clauses</label>
    <type>TextArea</type>
</CustomField>