force-app/main/default/objects/Case/fields/SubOfferingLeader__c.field-meta.xml
<CustomField>
    <fullName>SubOfferingLeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubOfferingLeader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HR_Applications6</relationshipName>
    <type>Lookup</type>
</CustomField>