force-app/main/default/objects/Case/fields/Who_Interviewed_the_candidate__c.field-meta.xml
<CustomField>
    <fullName>Who_Interviewed_the_candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New Hire needs to be interviewed.</description>
    <label>Who Interviewed the candidate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HR_Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>