force-app/main/default/objects/Case/recordTypes/custom_case_record.recordType-meta.xml
<RecordType>
    <fullName>custom_case_record</fullName>
    <active>true</active>
    <businessProcess>Case progress process</businessProcess>
    <description>custome case record to add path on page layout</description>
    <label>custom case record</label>
</RecordType>