force-app/main/default/objects/Case/recordTypes/HR_App_Record.recordType-meta.xml
<RecordType>
    <fullName>HR_App_Record</fullName>
    <active>true</active>
    <businessProcess>Case progress process</businessProcess>
    <description>custome case record to add path on page layout</description>
    <label>HR App Record</label>
</RecordType>