force-app/main/default/objects/Case/listViews/DC_Case.listView-meta.xml
<ListView>
    <fullName>DC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>DC</label>
    <queue>DC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>