force-app/main/default/objects/Case/listViews/Tax_Case.listView-meta.xml
<ListView>
    <fullName>Tax_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Tax</label>
    <queue>Tax</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>